@@ -153,27 +153,24 @@ public final class ModuleBootstrap {
         boolean addAllDefaultModules = false;
         boolean addAllSystemModules = false;
         boolean addAllApplicationModules = false;
-        String propValue = getAndRemoveProperty("jdk.module.addmods");
-        if (propValue != null) {
-            for (String mod: propValue.split(",")) {
-                switch (mod) {
-                    case ALL_DEFAULT:
-                        addAllDefaultModules = true;
-                        break;
-                    case ALL_SYSTEM:
-                        addAllSystemModules = true;
-                        break;
-                    case ALL_MODULE_PATH:
-                        addAllApplicationModules = true;
-                        break;
-                    default :
-                        roots.add(mod);
-                }
+        for (String mod: getExtraAddModules()) {
+            switch (mod) {
+                case ALL_DEFAULT:
+                    addAllDefaultModules = true;
+                    break;
+                case ALL_SYSTEM:
+                    addAllSystemModules = true;
+                    break;
+                case ALL_MODULE_PATH:
+                    addAllApplicationModules = true;
+                    break;
+                default :
+                    roots.add(mod);
             }
         }
 
         // --limit-modules
-        propValue = getAndRemoveProperty("jdk.module.limitmods");
+        String propValue = getAndRemoveProperty("jdk.module.limitmods");
         if (propValue != null) {
             Set<String> mods = new HashSet<>();
             for (String mod: propValue.split(",")) {
@@ -317,7 +314,7 @@ public final class ModuleBootstrap {
         PerfCounters.loadModulesTime.addElapsedTimeFrom(t5);
 
 
-        // --add-reads and --add-exports
+        // --add-reads and --add-exports/-add-exports-private
         addExtraReads(bootLayer);
         addExtraExports(bootLayer);
 
@@ -392,6 +389,31 @@ public final class ModuleBootstrap {
         }
     }
 
+    /**
+     * Returns the set of module names specified via --add-modules options
+     * on the command line
+     */
+    private static Set<String> getExtraAddModules() {
+        String prefix = "jdk.module.addmods.";
+        int index = 0;
+
+        // the system property is removed after decoding
+        String value = getAndRemoveProperty(prefix + index);
+        if (value == null) {
+            return Collections.emptySet();
+        }
+
+        Set<String> modules = new HashSet<>();
+        while (value != null) {
+            for (String s : value.split(",")) {
+                if (s.length() > 0) modules.add(s);
+            }
+            index++;
+            value = getAndRemoveProperty(prefix + index);
+        }
+
+        return modules;
+    }
 
     /**
      * Process the --add-reads options to add any additional read edges that
@@ -431,14 +453,35 @@ public final class ModuleBootstrap {
 
 
     /**
-     * Process the --add-exports options to add any additional read edges that
-     * are specified on the command-line.
+     * Process the --add-exports and --add-exports-private options to export
+     * additional packages specified on the command-line.
      */
     private static void addExtraExports(Layer bootLayer) {
 
-        // decode the command line options
-        Map<String, Set<String>> map = decode("jdk.module.addexports.");
+        // --add-exports
+        String prefix = "jdk.module.addexports.";
+        Map<String, Set<String>> exports = decode(prefix);
+        if (!exports.isEmpty()) {
+            addExtraExports(bootLayer, exports, false);
+        }
 
+        // --add-exports-private
+        prefix = "jdk.module.addexports.private.";
+        Map<String, Set<String>> exportsPrivate = decode(prefix);
+        if (!exportsPrivate.isEmpty()) {
+            exportsPrivate.keySet()
+                .stream()
+                .filter(exports::containsKey)
+                .forEach(k -> fail(k + " specified more than once to"
+                                     + " --add-exports[-private]"));
+            addExtraExports(bootLayer, exportsPrivate, true);
+        }
+    }
+
+    private static void addExtraExports(Layer bootLayer,
+                                        Map<String, Set<String>> map,
+                                        boolean exportPrivate)
+    {
         for (Map.Entry<String, Set<String>> e : map.entrySet()) {
 
             // the key is $MODULE/$PACKAGE
@@ -473,10 +516,19 @@ public final class ModuleBootstrap {
                 }
 
                 if (allUnnamed) {
-                    Modules.addExportsToAllUnnamed(m, pn);
+                    if (exportPrivate) {
+                        Modules.addExportsPrivateToAllUnnamed(m, pn);
+                    } else {
+                        Modules.addExportsToAllUnnamed(m, pn);
+                    }
                 } else {
-                    Modules.addExports(m, pn, other);
+                    if (exportPrivate) {
+                        Modules.addExportsPrivate(m, pn, other);
+                    } else {
+                        Modules.addExports(m, pn, other);
+                    }
                 }
+
             }
         }
     }
@@ -511,10 +563,9 @@ public final class ModuleBootstrap {
             if (rhs.isEmpty())
                 fail("Unable to parse: " + value);
 
-
             // value is <module>(,<module>)*
             if (map.containsKey(key))
-                fail(key + " specified more than once");
+                fail(key + " specified more than once to --add-exports[-private]");
 
             Set<String> values = new HashSet<>();
             map.put(key, values);
